<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/scannerFragment">

    <fragment
        android:id="@+id/scannerFragment"
        android:name="com.krishe.carbon.ui.scanner.ScannerFragment"
        android:label="@string/nav_scanner" />

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.krishe.carbon.ui.dashboard.DashboardFragment"
        android:label="@string/nav_dashboard" />

    <fragment
        android:id="@+id/logsFragment"
        android:name="com.krishe.carbon.ui.logs.LogsFragment"
        android:label="@string/nav_logs" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.krishe.carbon.ui.settings.SettingsFragment"
        android:label="Settings" />
</navigation>
